After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 152585 - Graph catagory labels don't update automatically
Graph catagory labels don't update automatically
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
git master
Other Linux
: Normal normal
: ---
Assigned To: Emmanuel Pacaud
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-09-14 09:47 UTC by Adrian Custer
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adrian Custer 2004-09-14 09:47:11 UTC
When a user changes the value in a spreadsheet cell which is linked to the
catagory label of a column graph, the graph doesn't update autmatically.
Invoking the graph guru and simply clicking OK updates the graph. This is unlike
data values which are updated automatically.

1) new gnumeric

2) a2:d5 gets
	FR	SP	UK
Barrels	230	310	20
Casks	34	53	23
Cases	421	500	60

3) select a2:d5

4) make a column graph 
 4.1) click on graph guru icon
 4.2) select the column graph type
 4.3) click ok
 4.4) click on worksheet

5) alter b2 from "FR" to "France"
==> the graph is not changed, I would expect the label now to read "france"

6) right click on graph to get context menu, select "properties"
==> guru opens, note that preview already has "France"

7) Click the Ok button
==> graph is updated with "france"

--adrian
Comment 1 Emmanuel Pacaud 2004-10-26 13:42:54 UTC
Fixed in CVS. 

Will be in 1.3.92.