src/cut-n-paste-code/goffice/graph/gog-axis.c
@@ -1256,9 +1256,13 @@ gog_axis_update (GogObject *obj)
 		axis->auto_bound [AXIS_ELEM_MAX] = axis->logical_max_val;
 
 	gog_axis_calc_ticks (axis);
-	
+
+	/* FIXME: there isn't an easy way to know if a discrete axis
+	 * needs to emit a changed signal. So allways emit changed signal if
+	 * axis is discrete */
 	if (old_min != axis->auto_bound [AXIS_ELEM_MIN] ||
-	    old_max != axis->auto_bound [AXIS_ELEM_MAX])
+	    old_max != axis->auto_bound [AXIS_ELEM_MAX] ||
+	    axis->is_discrete)
 		gog_object_emit_changed (GOG_OBJECT (obj), TRUE);
 }
 
